Added login page.

--- a/public/index.html
+++ b/public/index.html
@@ -12,40 +12,28 @@
 	<div id="content">
 		<section id="secondary-content">
 			<header>
-				<h1>Tag Bundles</h1>
+				<h1>Sign In</h1>
 			</header>
 			
-			<ol id="tag-bundles">
-				<li><a href="#" class="selected">People <em>500</em></a></li>
-				<li><a href="#" class="empty">Browsers <em>0</em></a></li>
-			</ol><!-- /#tag-bundles -->
+			<form action="/login" method="post">
+				<label for="username">Delicious Username</label>
+				<input id="username" type="text" />
+				<label for="password">Delicious Password</label>
+				<input id="password" type="password" />
+				<input type="submit" value="Sign In" />
+			</form>
 			
-			<footer>
-				<form action="#" method="post" id="new-bundle">
-					<label for="new-bundle-name">Name</label>
-					<input type="text" id="new-bundle-name" name="name" />
-					<input type="submit" id="new-bundle-submit" value="Create Bundle" />
-				</form>
-			</footer>
+			<a href="https://secure.delicious.com/newpw/username_or_email">Forgot your password?</a>
+			
+			<p><small>We ♥ OAuth. Please <a href="http://support.delicious.com/forum/comments.php?DiscussionID=1154">let Delicious know</a>.</small></p>
 		</section><!-- /#secondary-content -->
 		
 		<section id="primary-content">
 			<header>
-				<h1>My Tags</h1>
-				
-				<form action="#" method="get" id="filter-tags">
-					<label for="filter-tags-q">Filter Tags:</label>
-					<input type="search" id="filter-tags-q" name="q" />
-				</form>
+				<h1>Make Delicious Tagging Better</h1>
 			</header>
 			
-			<ul id="tags">
-				<li><a href="#" title="1 Bookmark">lorem</a></li>
-				<li><a href="#" title="20 Bookmarks" class="in-bundle">ipsum</a></li>
-				<li><a href="#" title="500 Bookmarks" class="in-bundle adding">dolor</a></li>
-				<li><a href="#" title="2 Bookmarks" class="removing">sit</a></li>
-				<li><a href="#" title="3 Bookmarks">amet</a></li>
-			</ul><!-- /#tags -->
+			<p>Easily bundle tags. Clean up messy tag namespaces. Navigate your tags with aplomb.</p>
 		</section><!-- /#primary-content -->
 	</div><!-- /#content -->
 </body>
