Added JavaScript references to these pages (at the bottom, natch)

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
 			<p>Easily bundle tags. Clean up messy tag namespaces. Navigate your tags with aplomb.</p>
 		</section><!-- /#primary-content -->
 	</div><!-- /#content -->
+	
+	<!-- (scripts at bottom: http://developer.yahoo.com/performance/rules.html#js_bottom) -->
+	<script src="behavior/jquery.min.js" type="text/javascript"></script>
+	<script src="behavior/global.js" type="text/javascript"></script>
 </body>
 </html>
