--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -48,5 +48,10 @@
 			</ul><!-- /#tags -->
 		</section><!-- /#primary-content -->
 	</div><!-- /#content -->
+
+	<!-- (scripts at bottom: http://developer.yahoo.com/performance/rules.html#js_bottom) -->	
+	<script src="behavior/jquery.min.js" type="text/javascript"></script>
+	<script src="behavior/global.js" type="text/javascript"></script>
+	
 </body>
 </html>
