Tagline and favicon sprucing.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8" />
-	<title>Tag Better</title>
+	<title>Tag Better &ndash; Makes Delicious Tagging Better</title>
 	
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/html5.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/reset.css" />
@@ -33,7 +33,7 @@
 		
 		<section id="primary-content">
 			<header>
-				<h1>Make Delicious Tagging Better</h1>
+				<h1>Makes Delicious Tagging Better</h1>
 			</header>
 			
 			<p>Easily bundle tags. Clean up messy tag namespaces. Navigate your tags with aplomb.</p>
