--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -2,11 +2,14 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8" />
-	<title>Tag Better</title>
+	<title>Tag Better &ndash; Makes Delicious Tagging Better</title>
 	
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/html5.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/reset.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/page.css" />
+	
+	<link type="image/x-icon" href="/favicon.ico" rel="icon" />
+	<link type="image/x-icon" href="/favicon.ico" rel="shortcut icon" />
 </head>
 <body>
 	<header id="header">
