Styled tag bundle list.

--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -26,8 +26,9 @@
 			</header>
 			
 			<ol id="tag-bundles">
-				<li><a href="#" class="selected">People <em>500</em></a></li>
-				<li><a href="#" class="empty">Browsers <em>0</em></a></li>
+				<li><a href="#" class="empty"><em>0</em> Browsers</a></li>
+				<li><a href="#" class="selected"><em>500</em> People</a></li>
+				<li><a href="#"><em>20</em> Organizations</a></li>
 			</ol><!-- /#tag-bundles -->
 			
 			<footer>
