Updated the paths within the TagBetter_Config object

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
 	<script type="text/javascript">
 		TagBetter_Config = 
 		{
-			getBundlesURI:  "http://blah-blah",
-			getTagsURI:     "http://blah-blah",
+			getBundlesURI:  "/bundles.json",
+			getTagsURI:     "/tags.json",
 			
 			postBundlesURI: "http://blah-blah",
 		}
