--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -395,14 +395,14 @@
 	<script type="text/javascript">
 		TagBetter_Config = 
 		{
-			getBundlesURI:  "http://blah-blah",
-			getTagsURI:     "http://blah-blah",
+			getBundlesURI:  "/bundles.json",
+			getTagsURI:     "/tags.json",
 			
 			postBundlesURI: "http://blah-blah",
 		}
 	</script>
 	
-	<script type="text/javascript" src="behavior/jquery.min.js"></script>
+	<script type="text/javascript" src="behavior/jquery.js"></script> <!-- TO DO: Set this back to the minified version after coding is complete -->
 	<script type="text/javascript" src="behavior/global.js"></script>
 	
 </body>
