Stubbed some home page content. Added forget link. Misc.

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,25 @@
 		
 		<section id="primary-content">
 			<header>
-				<h1>Makes Delicious Tagging Better</h1>
+				<hgroup>
+					<h1>Makes Delicious Tagging Better</h1>
+					<h2>Easily bundle tags. Clean up messy tag namespaces. Navigate your tags with aplomb.</h2>
+				</hgroup>
 			</header>
 			
-			<p>Easily bundle tags. Clean up messy tag namespaces. Navigate your tags with aplomb.</p>
+			<section>
+				<header><h1>Tag Bundles</h1></header>
+				
+				<p>Create and manage tag bundles.</p>
+				<p>Filter your tag list using powerful live search.</p>
+			</section>
+			
+			<section>
+				<header><h1>Security</h1></header>
+				
+				<p>Login with your delicious account.</p>
+				<p>At any time, you can delete your Tag Better account which will purge all of your data from our systems.</p>
+			</section>
 		</section><!-- /#primary-content -->
 	</div><!-- /#content -->
 	
