Moved some of the Bundle-related classes up to their respective list items

--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -26,8 +26,8 @@
 			</header>
 			
 			<ol id="tag-bundles">
-				<li><a href="#" class="empty"><em>0</em> Browsers</a></li>
-				<li><a href="#" class="selected"><em>500</em> People</a></li>
+				<li class="empty"><a href="#" ><em>0</em> Browsers</a></li>
+				<li class="selected"><a href="#"><em>500</em> People</a></li>
 				<li><a href="#"><em>20</em> Organizations</a></li>
 			</ol><!-- /#tag-bundles -->
 			
