Add network activity for tag filter and handle bookmark pluralization.

--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -70,8 +70,9 @@
 	<script type="text/javascript">
 		TagBetter_Config = 
 		{
-			bundlesURI:  "/bundles",
-			tagsURI:     "/tags",
+			bundlesURI:    "/bundles",
+			tagsURI:       "/tags",
+			searchTagsURI: "/tags/search"//,
 		}
 	</script>
 	
