Logout/forget behavior.

--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -16,8 +16,8 @@
 		<h1>Tag Better</h1>
 		
 		<nav>
-			<a href="/logout">Logout</a>
-			<a href="/forget" class="forget-link" title="This will force Tag Better to purge all of your data from our systems.">Delete My Account</a>
+			<a id="logout" href="/logout">Logout</a>
+			<a id="forget" href="/forget" class="forget-link" title="This will force Tag Better to purge all of your data from our systems.">Delete My Account</a>
 		</nav>
 	</header>
 	<div id="content">
