Added home page link and trimmed home page content for accuracy.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="header">
-		<h1>Tag Better</h1>
+		<h1><a href="/" rel="home">Tag Better</a></h1>
 	</header>
 	<div id="content">
 		<section id="secondary-content">
@@ -43,13 +43,13 @@
 				<header><h1>Tag Bundles</h1></header>
 				
 				<p>If you’re like us, then you have hundreds or thousands of tags. Using Tag Better, you can work tag-by-tag or bundle-by-bundle for a flexible workflow.</p>
-				<p>Still too many tags? Use our powerful live search to filter your tag list down to a manageable size. Use simple string matching or powerful regular expressions.</p>
+				<p>Still got too many tags? Use our powerful live search to filter your tag list down to a manageable size. <!-- Use simple string matching or powerful regular expressions. --></p>
 			</section>
 			
 			<section>
 				<header><h1>Security</h1></header>
 				
-				<p>Getting started with Tag Better is easy, just login with your delicious account. Your credentials are never saved on our server and your data is cached for a limited time only.</p>
+				<p>Getting started with Tag Better is easy, just login with your delicious account. Your credentials are never saved on our server<!-- and your data is cached for a limited time only -->.</p>
 				<p>At any time, you can delete your Tag Better account which will purge all of your data from Tag Better’s systems.</p>
 			</section>
 		</section><!-- /#primary-content -->
