--- a/public/tagbetter.html
+++ b/public/tagbetter.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header id="header">
-		<h1>Tag Better</h1>
+		<h1><a href="/" rel="home">Tag Better</a></h1>
 		
 		<nav>
 			<a id="logout" href="/logout">Logout</a>
